# filing_cabinet

./: .gitignore  README.md  deploy.sh  file_processor.py  pyproject.toml  requirements.txt  setup.py
filing_cabinet/: __init__.py  cli.py  cli_utils.py  config.py  db.py  errors.py  utils.py
filing_cabinet/config/: __init__.py  config_service.py  configuration.py
filing_cabinet/models/: __init__.py  file.py  incarnation.py
filing_cabinet/repositories/: __init__.py  base.py  file_repository.py  incarnation_repository.py
filing_cabinet/services/: document_processor.py  document_template_service.py  file_processor_service.py  file_service.py
filing_cabinet/utils/: __init__.py  file_utils.py  logging.py
scripts/: commit.sh  tag_version.sh
tests/: __init__.py  test_config_service.py  test_file_service.py
